[package]
name = "arenavision"
version = "0.1.0"
authors = ["Alberto Luna <alberto.luna.95@gmail.com>"]

[profile.release]
lto = true

[dependencies]
reqwest = "0.9.17"
chrono = "0.4.6"
scraper = "0.10.0"
actix-web = "0.7.19"
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
Inflector = "0.11.4"
